# smarf

./: .gitignore  README.md  example.py  pyproject.toml
scaf/smart_call/: __init__.py  prompts.py  smart_call.py
scaf/utils/: execute_code_with_variables.py  get_data_around_call.py
smaf/smart_call/: __init__.py  prompts.py  smart_call.py
smaf/utils/: get_data_around_call.py  logging.py
smarf/smart_call/: __init__.py  prompts.py  smart_call.py
tests/: test_smart_call.py
tests/smart_call/: test_smart_call.py
tests/utils/: test_execute_code_with_variables.py  test_get_data_around_call.py
