[tool.poetry]
name = "code-aware-functions"
version = "0.1.0"
description = ""
authors = ["Joaquín Ossandon <jossandonstanke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.47.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
