[tool.poetry]
name = "smaf"
version = "0.1.0"
description = "Smart, code-aware functions."
authors = ["Joaquín Ossandon <jossandonstanke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.47.0"
pydantic = "^2.9.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
rich = "^13.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
